generator client {
  provider = "prisma-client"
  output   = "../app/features/.server/prisma/generated"
}

datasource db {
  provider = "postgresql"
}

enum UserRole {
  CUSTOMER
  ADMIN_LOCAL
  ADMIN_CC
  ADMIN_PLATFORM
}

enum MallStatus {
  ACTIVE
  INACTIVE
  SUSPENDED
}

enum StoreStatus {
  DRAFT
  PENDING_APPROVAL
  ACTIVE
  REJECTED
  SUSPENDED
}

enum StoreRegistrationRequestStatus {
  PENDING
  APPROVED
  REJECTED
}

enum ProductStatus {
  DRAFT
  ACTIVE
  INACTIVE
  ARCHIVED
}

enum PromotionStatus {
  DRAFT
  ACTIVE
  INACTIVE
  EXPIRED
}

enum ReservationStatus {
  PENDING
  CONFIRMED
  COMPLETED
  REJECTED
  CANCELED
}

enum AiJobType {
  PRODUCT_DRAFT
  MALL_REPORT
}

enum AiJobStatus {
  QUEUED
  SUCCESS
  FAILED
}

model User {
  id              String    @id
  name            String
  email           String    @unique
  emailVerified   Boolean   @default(false) @map("email_verified")
  image           String?
  role            UserRole  @default(CUSTOMER)
  phone           String?
  preferredMallId String?   @map("preferred_mall_id")
  banned          Boolean?  @default(false)
  banReason       String?   @map("ban_reason")
  banExpires      DateTime? @map("ban_expires")
  createdAt       DateTime  @default(now()) @map("created_at")
  updatedAt       DateTime  @default(now()) @updatedAt @map("updated_at")

  sessions                    Session[]
  accounts                    Account[]
  organizationMemberships     Member[]
  sentOrganizationInvitations Invitation[] @relation("OrganizationInvitationInviter")

  profile       UserProfile?
  preferredMall Mall?        @relation("PreferredMall", fields: [preferredMallId], references: [id], onDelete: SetNull)

  managedMalls          Mall[]                     @relation("MallAdmin")
  ownedStores           Store[]                    @relation("StoreOwner")
  reservations          Reservation[]              @relation("ReservationCustomer")
  appliedStoreRequests  StoreRegistrationRequest[] @relation("StoreApplicant")
  reviewedStoreRequests StoreRegistrationRequest[] @relation("StoreReviewer")
  createdPromotions     Promotion[]                @relation("PromotionCreator")
  updatedPromotions     Promotion[]                @relation("PromotionUpdater")
  aiRuns                AiRun[]                    @relation("AiRunRequester")

  favoriteStores     FavoriteStore[]
  favoriteProducts   FavoriteProduct[]
  favoritePromotions FavoritePromotion[]
  searchLogs         SearchLog[]

  createdAdminCcAssignments AdminCcAssignment[] @relation("AdminCcAssignmentCreator")
  adminCcAssignments        AdminCcAssignment[] @relation("AdminCcAssignmentAssignee")

  @@index([preferredMallId], map: "users_preferredMallId_idx")
  @@index([role], map: "users_role_idx")
  @@map("users")
}

model Session {
  id                   String        @id
  expiresAt            DateTime      @map("expires_at")
  token                String        @unique
  createdAt            DateTime      @default(now()) @map("created_at")
  updatedAt            DateTime      @default(now()) @updatedAt @map("updated_at")
  ipAddress            String?       @map("ip_address")
  userAgent            String?       @map("user_agent")
  userId               String        @map("user_id")
  impersonatedBy       String?       @map("impersonated_by")
  activeOrganizationId String?       @map("active_organization_id")
  user                 User          @relation(fields: [userId], references: [id], onDelete: Cascade)
  activeOrganization   Organization? @relation(fields: [activeOrganizationId], references: [id], onDelete: SetNull)

  @@index([userId], map: "sessions_userId_idx")
  @@index([activeOrganizationId], map: "sessions_activeOrganizationId_idx")
  @@map("sessions")
}

model Account {
  id                    String    @id
  accountId             String    @map("account_id")
  providerId            String    @map("provider_id")
  userId                String    @map("user_id")
  accessToken           String?   @map("access_token")
  refreshToken          String?   @map("refresh_token")
  idToken               String?   @map("id_token")
  accessTokenExpiresAt  DateTime? @map("access_token_expires_at")
  refreshTokenExpiresAt DateTime? @map("refresh_token_expires_at")
  scope                 String?
  password              String?
  createdAt             DateTime  @default(now()) @map("created_at")
  updatedAt             DateTime  @default(now()) @updatedAt @map("updated_at")
  user                  User      @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId], map: "accounts_userId_idx")
  @@map("accounts")
}

model Verification {
  id         String   @id
  identifier String
  value      String
  expiresAt  DateTime @map("expires_at")
  createdAt  DateTime @default(now()) @map("created_at")
  updatedAt  DateTime @default(now()) @updatedAt @map("updated_at")

  @@index([identifier], map: "verifications_identifier_idx")
  @@map("verifications")
}

model Organization {
  id        String    @id
  name      String
  slug      String    @unique
  logo      String?
  metadata  Json?
  createdAt DateTime  @default(now()) @map("created_at")
  updatedAt DateTime? @map("updated_at")

  activeSessions Session[]
  members        Member[]
  invitations    Invitation[]

  @@map("organizations")
}

model Member {
  id             String   @id
  organizationId String   @map("organization_id")
  userId         String   @map("user_id")
  role           String   @default("member")
  createdAt      DateTime @default(now()) @map("created_at")

  organization Organization @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  user         User         @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([organizationId, userId], map: "members_organization_user_key")
  @@index([organizationId], map: "members_organizationId_idx")
  @@index([userId], map: "members_userId_idx")
  @@map("organization_members")
}

model Invitation {
  id             String   @id
  organizationId String   @map("organization_id")
  email          String
  role           String
  status         String   @default("pending")
  expiresAt      DateTime @map("expires_at")
  createdAt      DateTime @default(now()) @map("created_at")
  inviterId      String   @map("inviter_id")

  organization Organization @relation(fields: [organizationId], references: [id], onDelete: Cascade)
  inviter      User         @relation("OrganizationInvitationInviter", fields: [inviterId], references: [id], onDelete: Cascade)

  @@index([organizationId, status], map: "invitations_organization_status_idx")
  @@index([organizationId, email, status], map: "invitations_org_email_status_idx")
  @@index([email], map: "invitations_email_idx")
  @@index([inviterId], map: "invitations_inviterId_idx")
  @@map("organization_invitations")
}

model UserProfile {
  userId                 String   @id @map("user_id")
  displayName            String?  @map("display_name")
  avatarUrl              String?  @map("avatar_url")
  highContrastEnabled    Boolean  @default(false) @map("high_contrast_enabled")
  fontScalePct           Int      @default(100) @map("font_scale_pct")
  favoriteFeatureEnabled Boolean  @default(true) @map("favorite_feature_enabled")
  updatedAt              DateTime @default(now()) @updatedAt @map("updated_at")
  user                   User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("user_profiles")
}

model Mall {
  id            String     @id @default(cuid())
  name          String
  city          String
  address       String
  description   String?
  status        MallStatus @default(ACTIVE)
  adminCcUserId String?    @map("admin_cc_user_id")
  createdAt     DateTime   @default(now()) @map("created_at")
  updatedAt     DateTime   @default(now()) @updatedAt @map("updated_at")

  adminCcUser        User?                      @relation("MallAdmin", fields: [adminCcUserId], references: [id], onDelete: SetNull)
  preferredByUsers   User[]                     @relation("PreferredMall")
  stores             Store[]
  products           Product[]
  registrations      StoreRegistrationRequest[]
  promotions         Promotion[]
  reservations       Reservation[]
  searchLogs         SearchLog[]
  dailyMetrics       DailyMallMetric[]
  aiRuns             AiRun[]
  adminCcAssignments AdminCcAssignment[]

  @@index([status], map: "malls_status_idx")
  @@index([adminCcUserId], map: "malls_adminCcUserId_idx")
  @@map("malls")
}

model Store {
  id           String      @id @default(cuid())
  mallId       String      @map("mall_id")
  ownerUserId  String?     @map("owner_user_id")
  name         String
  category     String?
  description  String?
  phone        String?
  contactEmail String?     @map("contact_email")
  status       StoreStatus @default(PENDING_APPROVAL)
  createdAt    DateTime    @default(now()) @map("created_at")
  updatedAt    DateTime    @default(now()) @updatedAt @map("updated_at")

  mall  Mall  @relation(fields: [mallId], references: [id], onDelete: Cascade)
  owner User? @relation("StoreOwner", fields: [ownerUserId], references: [id], onDelete: SetNull)

  products            Product[]
  promotions          Promotion[]
  reservations        Reservation[]
  aiRuns              AiRun[]
  favoriteStores      FavoriteStore[]
  approvedFromRequest StoreRegistrationRequest? @relation("ApprovedStore")

  @@index([mallId], map: "stores_mallId_idx")
  @@index([ownerUserId], map: "stores_ownerUserId_idx")
  @@index([status], map: "stores_status_idx")
  @@map("stores")
}

model StoreRegistrationRequest {
  id               String                         @id @default(cuid())
  mallId           String                         @map("mall_id")
  applicantUserId  String                         @map("applicant_user_id")
  storeName        String                         @map("store_name")
  category         String?
  description      String?
  contactEmail     String?                        @map("contact_email")
  contactPhone     String?                        @map("contact_phone")
  status           StoreRegistrationRequestStatus @default(PENDING)
  reviewNotes      String?                        @map("review_notes")
  reviewedByUserId String?                        @map("reviewed_by_user_id")
  createdStoreId   String?                        @unique @map("created_store_id")
  createdAt        DateTime                       @default(now()) @map("created_at")
  updatedAt        DateTime                       @default(now()) @updatedAt @map("updated_at")
  reviewedAt       DateTime?                      @map("reviewed_at")

  mall         Mall   @relation(fields: [mallId], references: [id], onDelete: Cascade)
  applicant    User   @relation("StoreApplicant", fields: [applicantUserId], references: [id], onDelete: Cascade)
  reviewedBy   User?  @relation("StoreReviewer", fields: [reviewedByUserId], references: [id], onDelete: SetNull)
  createdStore Store? @relation("ApprovedStore", fields: [createdStoreId], references: [id], onDelete: SetNull)

  @@index([mallId, status], map: "store_registration_requests_mall_status_idx")
  @@index([applicantUserId], map: "store_registration_requests_applicant_idx")
  @@map("store_registration_requests")
}

model Product {
  id            String        @id @default(cuid())
  mallId        String        @map("mall_id")
  storeId       String        @map("store_id")
  name          String
  category      String?
  description   String?
  status        ProductStatus @default(DRAFT)
  priceOriginal Decimal       @map("price_original") @db.Decimal(12, 2)
  priceDiscount Decimal?      @map("price_discount") @db.Decimal(12, 2)
  stock         Int           @default(0)
  isReservable  Boolean       @default(true) @map("is_reservable")
  aiAssisted    Boolean       @default(false) @map("ai_assisted")
  createdAt     DateTime      @default(now()) @map("created_at")
  updatedAt     DateTime      @default(now()) @updatedAt @map("updated_at")

  mall  Mall  @relation(fields: [mallId], references: [id], onDelete: Cascade)
  store Store @relation(fields: [storeId], references: [id], onDelete: Cascade)

  reservations     Reservation[]
  favoriteProducts FavoriteProduct[]

  @@index([mallId], map: "products_mallId_idx")
  @@index([storeId], map: "products_storeId_idx")
  @@index([status], map: "products_status_idx")
  @@map("products")
}

model Promotion {
  id              String          @id @default(cuid())
  mallId          String          @map("mall_id")
  storeId         String          @map("store_id")
  title           String
  description     String?
  status          PromotionStatus @default(DRAFT)
  startsAt        DateTime?       @map("starts_at")
  endsAt          DateTime?       @map("ends_at")
  createdByUserId String?         @map("created_by_user_id")
  updatedByUserId String?         @map("updated_by_user_id")
  createdAt       DateTime        @default(now()) @map("created_at")
  updatedAt       DateTime        @default(now()) @updatedAt @map("updated_at")

  mall  Mall  @relation(fields: [mallId], references: [id], onDelete: Cascade)
  store Store @relation(fields: [storeId], references: [id], onDelete: Cascade)

  createdByUser User? @relation("PromotionCreator", fields: [createdByUserId], references: [id], onDelete: SetNull)
  updatedByUser User? @relation("PromotionUpdater", fields: [updatedByUserId], references: [id], onDelete: SetNull)

  favoritePromotions FavoritePromotion[]

  @@index([mallId, status], map: "promotions_mall_status_idx")
  @@index([storeId, status], map: "promotions_store_status_idx")
  @@map("promotions")
}

model Reservation {
  id             String            @id @default(cuid())
  mallId         String            @map("mall_id")
  storeId        String            @map("store_id")
  productId      String            @map("product_id")
  customerUserId String            @map("customer_user_id")
  status         ReservationStatus @default(PENDING)
  quantity       Int               @default(1)
  pickupFullName String            @map("pickup_full_name")
  pickupPhone    String            @map("pickup_phone")
  pickupNote     String?           @map("pickup_note")
  qrCodeValue    String            @unique @map("qr_code_value")
  requestedAt    DateTime          @default(now()) @map("requested_at")
  confirmedAt    DateTime?         @map("confirmed_at")
  completedAt    DateTime?         @map("completed_at")
  canceledAt     DateTime?         @map("canceled_at")
  statusReason   String?           @map("status_reason")
  createdAt      DateTime          @default(now()) @map("created_at")
  updatedAt      DateTime          @default(now()) @updatedAt @map("updated_at")

  mall         Mall    @relation(fields: [mallId], references: [id], onDelete: Cascade)
  store        Store   @relation(fields: [storeId], references: [id], onDelete: Cascade)
  product      Product @relation(fields: [productId], references: [id], onDelete: Cascade)
  customerUser User    @relation("ReservationCustomer", fields: [customerUserId], references: [id], onDelete: Cascade)

  @@index([customerUserId, status], map: "reservations_customer_status_idx")
  @@index([storeId, status], map: "reservations_store_status_idx")
  @@map("reservations")
}

model FavoriteStore {
  id        String   @id @default(cuid())
  userId    String   @map("user_id")
  storeId   String   @map("store_id")
  createdAt DateTime @default(now()) @map("created_at")

  user  User  @relation(fields: [userId], references: [id], onDelete: Cascade)
  store Store @relation(fields: [storeId], references: [id], onDelete: Cascade)

  @@unique([userId, storeId], map: "favorite_stores_user_store_key")
  @@map("favorite_stores")
}

model FavoriteProduct {
  id        String   @id @default(cuid())
  userId    String   @map("user_id")
  productId String   @map("product_id")
  createdAt DateTime @default(now()) @map("created_at")

  user    User    @relation(fields: [userId], references: [id], onDelete: Cascade)
  product Product @relation(fields: [productId], references: [id], onDelete: Cascade)

  @@unique([userId, productId], map: "favorite_products_user_product_key")
  @@map("favorite_products")
}

model FavoritePromotion {
  id          String   @id @default(cuid())
  userId      String   @map("user_id")
  promotionId String   @map("promotion_id")
  createdAt   DateTime @default(now()) @map("created_at")

  user      User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  promotion Promotion @relation(fields: [promotionId], references: [id], onDelete: Cascade)

  @@unique([userId, promotionId], map: "favorite_promotions_user_promotion_key")
  @@map("favorite_promotions")
}

model SearchLog {
  id          String   @id @default(cuid())
  mallId      String   @map("mall_id")
  userId      String?  @map("user_id")
  isGuest     Boolean  @default(false) @map("is_guest")
  queryText   String   @map("query_text")
  filtersJson Json?    @map("filters_json")
  createdAt   DateTime @default(now()) @map("created_at")

  mall Mall  @relation(fields: [mallId], references: [id], onDelete: Cascade)
  user User? @relation(fields: [userId], references: [id], onDelete: SetNull)

  @@index([mallId, createdAt], map: "search_logs_mall_createdAt_idx")
  @@index([userId], map: "search_logs_userId_idx")
  @@map("search_logs")
}

model DailyMallMetric {
  id                    String   @id @default(cuid())
  mallId                String   @map("mall_id")
  metricDate            DateTime @map("metric_date") @db.Date
  searchesCount         Int      @default(0) @map("searches_count")
  reservationsTotal     Int      @default(0) @map("reservations_total")
  reservationsCompleted Int      @default(0) @map("reservations_completed")
  activeStores          Int      @default(0) @map("active_stores")
  updatedAt             DateTime @default(now()) @updatedAt @map("updated_at")

  mall Mall @relation(fields: [mallId], references: [id], onDelete: Cascade)

  @@unique([mallId, metricDate], map: "daily_mall_metrics_mall_date_key")
  @@map("daily_mall_metrics")
}

model DailyPlatformMetric {
  id                    String   @id @default(cuid())
  metricDate            DateTime @unique(map: "daily_platform_metrics_metric_date_key") @map("metric_date") @db.Date
  activeMalls           Int      @default(0) @map("active_malls")
  activeStores          Int      @default(0) @map("active_stores")
  activeCustomers       Int      @default(0) @map("active_customers")
  searchesCount         Int      @default(0) @map("searches_count")
  reservationsTotal     Int      @default(0) @map("reservations_total")
  reservationsCompleted Int      @default(0) @map("reservations_completed")
  updatedAt             DateTime @default(now()) @updatedAt @map("updated_at")

  @@map("daily_platform_metrics")
}

model AiRun {
  id                String      @id @default(cuid())
  mallId            String?     @map("mall_id")
  storeId           String?     @map("store_id")
  requestedByUserId String      @map("requested_by_user_id")
  jobType           AiJobType   @map("job_type")
  jobStatus         AiJobStatus @default(QUEUED) @map("job_status")
  promptText        String?     @map("prompt_text")
  responseText      String?     @map("response_text")
  errorMessage      String?     @map("error_message")
  createdAt         DateTime    @default(now()) @map("created_at")

  mall            Mall?  @relation(fields: [mallId], references: [id], onDelete: SetNull)
  store           Store? @relation(fields: [storeId], references: [id], onDelete: SetNull)
  requestedByUser User   @relation("AiRunRequester", fields: [requestedByUserId], references: [id], onDelete: Cascade)

  @@index([mallId, jobType], map: "ai_runs_mall_jobType_idx")
  @@index([storeId, jobType], map: "ai_runs_store_jobType_idx")
  @@index([requestedByUserId], map: "ai_runs_requestedByUserId_idx")
  @@map("ai_runs")
}

model AdminCcAssignment {
  id              String   @id @default(cuid())
  mallId          String   @map("mall_id")
  adminCcUserId   String   @map("admin_cc_user_id")
  createdByUserId String   @map("created_by_user_id")
  createdAt       DateTime @default(now()) @map("created_at")

  mall          Mall @relation(fields: [mallId], references: [id], onDelete: Cascade)
  adminCcUser   User @relation("AdminCcAssignmentAssignee", fields: [adminCcUserId], references: [id], onDelete: Cascade)
  createdByUser User @relation("AdminCcAssignmentCreator", fields: [createdByUserId], references: [id], onDelete: Cascade)

  @@unique([mallId, adminCcUserId], map: "admin_cc_assignments_mall_admin_key")
  @@index([createdByUserId], map: "admin_cc_assignments_createdByUserId_idx")
  @@map("admin_cc_assignments")
}
